fix header stuck to top
line 3009

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3007,7 +3007,7 @@ input, select, textarea {
 		/* Header */
 
 			#header {
-				height: 65vh;
+				height: 80vh;
 			}
 
 				#header:after {
